<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use an incorrect version of Google Play services.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="hello">GTA San Andreas</string>
    <string name="app_name">DREAM MOBILE</string>
    <string name="text_paused_cellular">Would you like to enable downloading over cellular connections? Depending on your data plan, this may cost you money.</string>
    <string name="text_paused_cellular_2">If you choose not to enable downloading over cellular connections, the download will automatically resume when wi-fi is available.</string>
    <string name="text_button_resume_cellular">Resume download</string>
    <string name="text_button_wifi_settings">Wi-Fi settings</string>
    <string name="text_verifying_download">Verifying Download</string>
    <string name="text_validation_complete">XAPK File Validation Complete. Select OK to exit.</string>
    <string name="text_validation_failed">XAPK File Validation Failed.</string>
    <string name="text_button_pause">Pause Download</string>
    <string name="text_button_resume">Resume Download</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_button_cancel_verify">Cancel Verification</string>
    <string name="notification_download_complete">Download complete</string>
    <string name="players_list_header_dialog">Список игроков</string>
    <string name="players_list_header_first_column">ID</string>
    <string name="players_list_header_fourth_column">Пинг</string>
    <string name="players_list_header_second_column">Ник игрока</string>
    <string name="players_list_header_third_column">Уровень</string>
    <string name="players_list_search_hint">Поиск игрока</string>
    <string name="notification_download_failed">Download unsuccessful</string>
    <string name="state_unknown">Starting...</string>
    <string name="state_idle">Waiting for download to start</string>
    <string name="state_fetching_url">Looking for resources to download</string>
    <string name="state_connecting">Connecting to the download server</string>
    <string name="state_downloading">Downloading resources</string>
    <string name="state_completed">Download finished</string>
    <string name="state_paused_network_unavailable">Download paused because no network is available</string>
    <string name="state_paused_network_setup_failure">Download paused. Test a website in browser</string>
    <string name="state_paused_by_request">Download paused</string>
    <string name="state_paused_wifi_unavailable">Download paused because wifi is unavailable</string>
    <string name="state_paused_wifi_disabled">Download paused because wifi is disabled</string>
    <string name="state_paused_roaming">Download paused because you are roaming</string>
    <string name="state_paused_sdcard_unavailable">Download paused because the external storage is unavailable</string>
    <string name="state_failed_unlicensed">Download failed because you may not have purchased this app</string>
    <string name="state_failed_fetching_url">Download failed because the resources could not be found</string>
    <string name="state_failed_sdcard_full">Download failed because the external storage is full</string>
    <string name="state_failed_cancelled">Download cancelled</string>
    <string name="state_failed">Download failed</string>
    <string name="kilobytes_per_second">%1$s KB/s</string>
    <string name="time_remaining">Time remaining: %1$s</string>
    <string name="time_remaining_notification">%1$s left</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="dialog_join_from_launcher_msg">Вам необходимо зайти в игру используя лаунчер</string>
    <string name="dialog_join_from_launcher_ok">Принять</string>
    <string name="online_count">Онлайн: %1$s/%2$s</string>
    <string name="our_servers">Наши сервера</string>
    <string name="donate_pay"><u>Пополнить счёт</u></string>
    <string name="new_graphics"><font color="#FCF7F7">Улучшение графики </font>(Beta)</string>
    <string name="next">Next</string>
    <string name="nick_name"><font color="#FCF7F7">Ваш ник-нейм. </font>(пример: Name_Surname)</string>
    <string name="privacy"><u>Политикой конфиденциальности</u></string>
    <string name="example_ru_num">x777am 777</string>
    <string name="example_ua_num">AA 7777 AA</string>
    <string name="example_by_num">1234 AB-7</string>
    <string name="example_kz_num">444epa 77</string>
    <string name="buy_car_number">Покупка гос.номера</string>
    <string name="quests">Квесты</string>
    <string name="change_number_price">Изменение номера\t\t <font color='#6BFF73'>₽ 2,000</font></string>
    <string name="buy_number_price">Номерные знаки\t\t\t\t <font color='#6BFF73'>₽ 5,000</font></string>
    <string name="donate_stock">Акции</string>
    <string name="donate_services">Услуги</string>
    <string name="donate_transport">Транспорт</string>
    <string name="donate_skins">Скины</string>
    <string name="donate_boxex">Наборы</string>
    <string name="donate_vip">Вип</string>
    <string name="donate_cloths">Аксессуары</string>
    <string name="vehicle_type_economy">Эконом</string>
    <string name="vehicle_type_middle">Средний</string>
    <string name="vehicle_type_elite">Элитный</string>
    <string name="vehicle_type_exclusive">Эксклюзив</string>
    <string name="azs">Заправочная станция</string>
    <string name="input_fuel">Введите кол-во топлива</string>
    <string name="full">ПОЛНЫЙ</string>
    <string name="max_fuel_in_vehicle">Вместимость вашего бака</string>
    <string name="azs_releaze_price">Стоимость заправки</string>
    <string name="select_spawn_title">Выберите место появления</string>
    <string name="select_spawn_desc">Укажите одно из доступных мест, где вы хотели бы появится</string>
    <string name="exit_pos_title">Место выхода</string>
    <string name="select_pos">ВЫБРАТЬ МЕСТО</string>
    
    <!-- Чат и клавиатура -->
    <string name="chat_t">T</string>
    <string name="chat_connected_to">Добро пожаловать на сервер!</string>
</resources>
