<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hassle_tab_main" android:background="@drawable/splash_gradient_bg" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="horizontal" android:id="@+id/menu_list_cmd1" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/_20sdp" android:paddingEnd="@dimen/_20sdp">
        <TextView android:textSize="@dimen/_16sdp" android:textColor="#FFFFFF" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/players_list_header_dialog" android:layout_weight="4" android:fontFamily="@font/sfprodisplaybold" android:letterSpacing="0.02"/>
        <TextView android:textSize="@dimen/_12sdp" android:textColor="#FFFFFF" android:gravity="center" android:layout_gravity="center" android:id="@+id/players_list_value_players" android:background="@drawable/card_background" android:layout_width="@dimen/_100sdp" android:layout_height="@dimen/_30sdp" android:text="1000/1000" android:fontFamily="@font/sfprodisplaymedium" android:layout_marginStart="@dimen/_10sdp"/>
        <RelativeLayout android:layout_gravity="center" android:layout_width="@dimen/_200sdp" android:layout_height="@dimen/_30sdp" android:layout_weight="2" android:layout_marginEnd="@dimen/_10sdp">

            <EditText
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="#1A1A1A"
                android:fontFamily="@font/sfprodisplaybold"
                android:hint="@string/players_list_search_hint"
                android:imeOptions="actionGo|actionSend|actionDone|flagNoFullscreen|flagNoExtractUi"
                android:inputType="text"
                android:paddingStart="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#80FFFFFF"
                android:textSize="@dimen/_12sdp" />
            <ImageView android:id="@+id/icon_clear_search_text" android:visibility="invisible" android:layout_width="@dimen/_10sdp" android:layout_height="@dimen/_10sdp" android:layout_alignTop="@+id/search_view" android:layout_alignBottom="@+id/search_view" android:layout_marginEnd="@dimen/_13sdp" android:layout_alignEnd="@+id/search_view" app:srcCompat="@drawable/menu_close"/>
            <ImageView android:id="@+id/icon_search_view" android:layout_width="@dimen/_15sdp" android:layout_height="@dimen/_10sdp" android:src="@drawable/ic_search" android:layout_alignTop="@+id/search_view" android:layout_alignBottom="@+id/search_view" android:layout_marginEnd="@dimen/_10sdp" android:layout_alignEnd="@+id/search_view"/>
        </RelativeLayout>
        <Button android:layout_gravity="center" android:id="@+id/players_list_close" android:background="@drawable/menu_close" android:layout_width="25dp" android:layout_height="25dp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/players_list_name_column" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/menu_list_cmd1" app:layout_constraintTop_toBottomOf="@+id/menu_list_cmd1">
        <TextView android:textSize="@dimen/_11sdp" android:textColor="#80FFFFFF" android:layout_width="@dimen/_10sdp" android:layout_height="wrap_content" android:text="@string/players_list_header_first_column" android:layout_weight="1" android:fontFamily="@font/sfprodisplaymedium" android:layout_marginStart="@dimen/_20sdp"/>
        <TextView android:textSize="@dimen/_11sdp" android:textColor="#80FFFFFF" android:layout_width="@dimen/_40sdp" android:layout_height="wrap_content" android:text="@string/players_list_header_second_column" android:layout_weight="5" android:fontFamily="@font/sfprodisplaymedium"/>
        <TextView android:textSize="@dimen/_11sdp" android:textColor="#80FFFFFF" android:layout_width="@dimen/_17sdp" android:layout_height="wrap_content" android:text="@string/players_list_header_third_column" android:layout_weight="3" android:fontFamily="@font/sfprodisplaymedium"/>
        <TextView android:textSize="@dimen/_11sdp" android:textColor="#80FFFFFF" android:layout_width="@dimen/_20sdp" android:layout_height="wrap_content" android:text="@string/players_list_header_fourth_column" android:layout_weight="2" android:fontFamily="@font/sfprodisplaymedium"/>
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/players_list_name_column"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="#333333"
        app:layout_constraintTop_toBottomOf="@+id/players_list_name_column"
        tools:layout_editor_absoluteX="19dp" />
    <androidx.recyclerview.widget.RecyclerView android:scrollbarThumbVertical="@drawable/quest_scrollbar_vertical_thumb" android:scrollbarTrackVertical="@drawable/quest_scrollbar_vertical_track" android:scrollbarAlwaysDrawVerticalTrack="true" android:id="@+id/players_list" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="@dimen/_230sdp" android:layout_below="@+id/players_list_name_column" android:fadeScrollbars="false" android:paddingStart="@dimen/_15sdp" android:paddingEnd="@dimen/_15sdp" app:layout_constraintTop_toBottomOf="@+id/view"/>
</androidx.constraintlayout.widget.ConstraintLayout>
